# arif

./: CMakeLists.txt  README
res/: arif.desktop
res/icons/: arif.svgz  icons.qrc
src/: arifmainwindow.cpp  arifmainwindow.h  arifmainwindow.ui  foreman.cpp  foreman.h  glhistogramwidget.cpp  glhistogramwidget.h  glvideowidget.cpp  glvideowidget.h  main.cpp  plotwidgets.cpp  plotwidgets.h  processing.cpp  processing.h  qcustomplot.cpp  qcustomplot.h  sourceselectionwindow.cpp  sourceselectionwindow.h
src/tclap/: Makefile
src/videosources/: aravis.cpp  aravis.h  images.cpp  images.h  interfaces.cpp  interfaces.h  qarvvideo.cpp  qarvvideo.h  rawvideo.cpp  rawvideo.h
